# marketing-mcp-servers

./: .gitignore  INTEGRATION_GUIDE.md  NOTION_FORMATTED.md  NOTION_PAGE.md  PRODUCTION_STACK_INTEGRATION.md  QUICKSTART.md  README.md  setup.sh  test_setup.py
.github/workflows/: test-social-media-mcp.yml
analytics-mcp/: README.md
content-mcp/: README.md
email-mcp/: README.md
seo-mcp/: README.md
social-media-mcp/: Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  test_server.py
social-media-mcp/docs/: API.md
social-media-mcp/examples/: example_usage.py
social-media-mcp/src/social_media_mcp/: __init__.py  __main__.py  models.py  platforms.py  server.py  utils.py
social-media-mcp/tests/: __init__.py  conftest.py  test_integration.py  test_server.py
